2007-12-06  Adam Piatyszek  <ediap@users.sourceforge.net>

	* configure.ac.in, itpp/base/converters.h, itpp/config_msvc.h:
	Move GCC_VERSION macro to the generated config.h file

	* itpp/comm/convcode.cpp: Replace ambiguous expression with a
	correct one

	"i = ++i;" is ambiguous in C/C++. For more information, see
	question 3.3 of the comp.lang.c FAQ list:
	http://c-faq.com/expr/ieqiplusplus.html

	* configure.ac.in: Use AC_MSG_NOTICE for printing configuration
	summary

	Thanks to this change, the configuration summary is automatically
	included in config.log, so there is no need to create a separate
	config_summary.log file.

	* configure.ac.in: Simplify detection of explicit library
	dependencies

	There is no need to check for "deplibs_check_method" by executing
	the "./libtool --config" command. This information is already
	available in a cached variable "lt_cv_deplibs_check_method"
	provided by the AC_PROG_LIBTOOL macro.

2007-12-05  Adam Piatyszek  <ediap@users.sourceforge.net>

	* configure.ac.in: Use "host_os" instead of "host" to simplify
	case statements

	* configure.ac.in: Enable explicit library dependencies on Mac
	OS X

	Dynamic linking on Mac OS X requires passing explicit library
	dependencies to the linker, even if libtool thinks it is not
	necessary. Therefore "enable_explicit_deps" is set to "yes"
	for this operating system. The solution is taken from pkg-config
	Portfile from macports.

	* itpp/base/random.cpp: Use tgamma() function instead of
	deprecated ambiguous gamma()

	* itpp/base/math/elem_math.h: Make sure itpp::gamma() use correct
	gamma implementation

	BTW, denote that this function name is deprecated due to its
	different implementation (and meaning) in BSD and glibc.

	* configure.ac.in: std::isfinite, std::isinf and std::isnan are
	broken on FreeBSD

	The use of these functions on FreeBSD with GCC 3.4.x compilers
	causes infinite loops or segmentation faults in bessel_test.